<resources>
    <string name="app_name">SMS</string>
    <string name="sms">SMS</string>

    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_id">Enter your mobile number</string>
    <string name="password">Password</string>
    <string name="no_user">User doesn\'t exist</string>
    <string name="username_error">Mobile number cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="valid_mobile">Should be of 10 numbers</string>
    <string name="valid_password">Should be atleast 6 characters long</string>

    <string name="network_error">A network error has occurred.</string>
    <string name="request_error">Connection timed out.</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>

    <string name="attendance">Attendance</string>
    <string name="select_class">Select Class</string>
    <string name="select_section">Select Section</string>
    <string name="select_student">Select Student</string>
    <string name="select_teacher">Select Teacher</string>
    <string name="select_period">Select Period</string>
    <string name="session">Session :</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="period">Period</string>
    <string name="absentees">Absentees</string>
    <string name="mark_absentees">Mark Absentees</string>
    <string name="change">Change</string>
    <string name="future_date">Selected date can\'t be future to present day</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="menu_item_delete">Delete</string>

    <string name="to">To</string>
    <string name="sent_to">Sent To:</string>
    <string name="classes">Classes</string>
    <string name="sections">Sections</string>
    <string name="students">Students</string>
    <string name="teachers">Teachers</string>
    <string name="select_all">Select All</string>
    <string name="message">Message</string>
    <string name="sms_hint">Message</string>
    <string name="empty_msg">Message Can\'t be empty</string>
    <string name="sms_history">View SMS History</string>
    <string name="no_sms">No SMS Sent!</string>

    <string name="logout">Logout</string>
    <string name="title_activity_sms">SMS</string>
    <string name="title_activity_sms_info">Sms History</string>
</resources>
