<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shikshitha.shikshithasms.attendance.AttendanceActivity"
    tools:showIn="@layout/activity_attendance">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/myScrollingContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_normal"
                android:text="@string/select_class"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_class"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:paddingBottom="@dimen/spacing_small" />

            <LinearLayout
                android:id="@+id/section_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_section"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_section"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_small"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/ic_calendar_black" />

                <TextView
                    android:id="@+id/date_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:layout_marginRight="@dimen/spacing_tiny"
                    android:layout_weight="1"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_xsmall" />

                <Button
                    android:id="@+id/change_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="changeDate"
                    android:text="@string/change"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_xsmall" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/session_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_small"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/session"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/session_spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:paddingBottom="@dimen/spacing_small" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/period_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_small"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_period"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/period_spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:paddingBottom="@dimen/spacing_small" />

            </LinearLayout>

            <TextView
                android:id="@+id/absentees_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_tiny"
                android:text="@string/absentees"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/absentees_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/mark_students"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_normal"
                android:text="@string/mark_absentees"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/student_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.v4.widget.SwipeRefreshLayout>
