<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shikshitha.shikshithasms.sms.SmsActivity"
    tools:showIn="@layout/activity_sms">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_small">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/message_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sms_hint"
                    android:inputType="text|textNoSuggestions|textMultiLine"
                    android:maxLength="300"
                    android:textSize="@dimen/text_xsmall" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/to"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/target_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/spacing_small" />

            <LinearLayout
                android:id="@+id/class_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_class"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/class_spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:paddingBottom="@dimen/spacing_small" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/classes_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classes"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/class_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/section_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_section"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/section_spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:paddingBottom="@dimen/spacing_small" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sections_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sections"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/section_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/student_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/add_students"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/students"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_small"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/all_students_btn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/add_students"
                        android:layout_alignParentRight="true"
                        android:minHeight="0dp"
                        android:minWidth="0dp"
                        android:onClick="selectAllStudents"
                        android:text="@string/select_all"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_small" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/student_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/teacher_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/add_teachers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teachers"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_small"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/all_teachers_btn"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/add_teachers"
                        android:layout_alignParentRight="true"
                        android:minHeight="0dp"
                        android:minWidth="0dp"
                        android:onClick="selectAllTeachers"
                        android:text="@string/select_all"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_small" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/teacher_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>
